# launcher

./: .gitignore  LICENSE  README.md  apps.example.json  index.html  package-lock.json  package.json  spec.md  vite.config.js
docs/superpowers/plans/: 2026-07-06-logs-tab.md
docs/superpowers/specs/: 2026-07-06-logs-tab-design.md
scripts/: bump-version.mjs  bump-version.test.mjs
src/: main.js  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  dispatch.rs  error.rs  lib.rs  logs.rs  main.rs  process.rs  registration.rs  relay.rs  run.rs  state.rs  substitute.rs  tray.rs  urlparse.rs  window_state.rs
