[package]
name = "launcher"
version = "0.3.2"
description = "Protocol handler application launcher (launcher:// scheme)"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

# The library is what Tauri's mobile/desktop entry points share.
[lib]
name = "launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
plist = "1.9"

# URL parsing for the launcher:// scheme (§2).
url = "2"

# HTTP for relay src download / dest upload (§6.1, §6.5).
reqwest = { version = "0.12", features = ["stream", "multipart"] }

# Async runtime (Tauri re-exports tokio; we depend on it directly for fs/spawn).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "time", "process"] }

# Filesystem idle-debounce watcher (§6.2).
notify = "6"
notify-debouncer-mini = "0.4"

# Session IDs (§6.1).
uuid = { version = "1", features = ["v4", "serde"] }

# Timestamps for session metadata (created_at, last-modified).
time = { version = "0.3", features = ["formatting", "serde", "serde-well-known"] }

# Structured logging.
log = "0.4"
tauri-plugin-log = "2"

thiserror = "1"

[target.'cfg(windows)'.dependencies]
# Windows per-user protocol registration (§4.1).
winreg = "0.52"

[features]
# Keep default feature set explicit for clarity.
default = []
